// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render snapshot 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Array [
      Object {
        "aspectRatio": 1,
        "width": "100%",
      },
    ]
  }
>
  <Image
    blurRadius={1.5}
    ratio={1}
    resizeMode="contain"
    source={
      Object {
        "uri": undefined,
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`render when pass props 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Array [
      Object {
        "aspectRatio": 1,
        "width": "100%",
      },
    ]
  }
>
  <Image
    blurRadius={1.5}
    ratio={1}
    resizeMode="contain"
    source={
      Object {
        "uri": "https://rocketseat-cdn.s3-sa-east-1.amazonaws.com/instagram-clone/small/1.jpeg",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        undefined,
      ]
    }
  />
</View>
`;
